# abuse-wii

./: .gitignore  AUTHORS  Makefile.am  README.md  configure.ac  sdl-config  syntevo-smartgithg-4_5.desktop  wiiconfig.sh
data/lisp/: english.lsp
src/: game.cpp  intsect.cpp  loadgame.cpp  view.cpp
src/imlib/: specs.cpp
src/sdlport/: event.cpp  setup.cpp  setup.h  sound.cpp  video.cpp
src/tool/: abuse-tool.cpp
wii/: meta.xml  readme.txt
